Fixed no scrollbar issue, navbar grid (xd), and reduntand css styling in peak

--- a/src/js/components/Central/Central.module.css
+++ b/src/js/components/Central/Central.module.css
@@ -14,8 +14,13 @@
   padding-right: 12%;
   height: calc(100% - 102px);
   overflow: auto;
-  scrollbar-width: none;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
 }
+
+.central::-webkit-scrollbar {
+  display: none;
+}  
 
 .fixed {
   height: calc(100% - 50px);
