--- a/src/js/components/common/SectionNavBar.module.css
+++ b/src/js/components/common/SectionNavBar.module.css
@@ -9,8 +9,7 @@
 
 .navBar {
   height: 30px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
 }
 
 .tabText {
