--- a/src/js/views/Peak/PeakDetails.module.css
+++ b/src/js/views/Peak/PeakDetails.module.css
@@ -5,7 +5,6 @@
   
 .card {
   grid-template-rows: 50vh auto;
-  margin: auto;
 }
 
 .detailsSection {
@@ -46,10 +45,6 @@
   width: 300px;
   height: 60px;
   font-size: var(--s-font-size);
-}
-
-.navBar {
-  margin: 20px auto;
 }
 
 @media (max-width: 980px) {
